# zr-alshasha

./: CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile.toml  README.md  iced-todos.desktop  index.html
.cargo/: config.toml
.github/workflows/: rust-macos.yml
data/applications/: zr-alshasha.desktop
src/: keys.rs  main.rs  my_text.rs
