[package]
name = "zr-alshasha"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
description = "an app to show keyboard input"
repository = "https://github.com/BKSalman/zr-alshasha"
keywords = ["keyboard", "input"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4.2", features = ["tokio"] }
iced_native = "0.5.1"
image = "0.24.3"
rdev = "0.5.1"
dirs = "4.0.0"
toml = "0.5.9"
serde = { version = "1.0.145", features = ["derive"] }
